<resources>
    <string name="app_name">안드테스트</string>

    <!-- activity_kakao_web -->
    <string name="main_ed_search">검색어 또는 URL 입력</string>

    <!-- fragment_login -->
    <string name="login_tv_id">ID</string>
    <string name="login_ed_id">이메일 입력</string>
    <string name="login_tv_pw">PW</string>
    <string name="login_ed_pw">비밀번호 입력</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_tv_join">회원가입 하기 ></string>
    <string name="login_toast_invalid_email">잘못된 형식입니다.</string>
    <string name="login_toast_invalid_password">비밀번호는 최소 6자리 입력해주세요.</string>
    <string name="login_toast_none_email">이메일을 입력해주세요.</string>
    <string name="login_toast_none_password">비밀번호를 입력해주세요.</string>
    <string name="login_toast_login_click">로그인 버튼이 클릭되었습니다.</string>
    <string name="login_toast_join_click"><u>회원가입 버튼이 클릭되었습니다.</u></string>

    <!-- activity_memo_list -->
    <string name="memo_list_tv_title">메모</string>
    <string name="memo_list_toast_none">저장된 메모가 없습니다.</string>

    <!-- activity_memo_add -->
    <string name="memo_add_tv_title">메모 추가</string>
    <string name="memo_add_ed_title_hint">제목 입력</string>
    <string name="memo_add_spinner">선택하세요</string>
    <string name="memo_add_ed_contents_hint">메모 상세 내용을 입력하세요.</string>
    <string name="memo_add_tv_contents_length">(%1$d / 300)</string>
    <string name="memo_add_tv_complete">완료</string>

    <!-- activity_memo_detail -->
    <string name="memo_detail_tv_title">메모 상세</string>
    <string name="memo_detail_none_contents">입력된 내용이 없습니다.</string>
</resources>
