<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginFragment">

    <data>
        <variable
            name="vm"
            type="com.rkddlsgur983.test.view.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="40dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_id"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/login_tv_id"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/ed_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_id"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/login_ed_id"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_id"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pw"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/login_tv_pw"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/ed_pw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_id" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_pw"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/login_ed_pw"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_pw"
            app:layout_constraintTop_toBottomOf="@+id/ed_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn_login"
            android:text="@string/login_btn_login"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pw" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/login_tv_join"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>